<resources>
    <string name="app_name">NAO Remote</string>
    <string name="action_settings">Settings</string>
    <string name="MessageText">Enter Message Here</string>
    <string name="Send">Send</string>


    <string name="Response">Response:</string>
    <string name="title_activity_settings">Settings</string>

    <!--General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_file_key">com.ryanwedoff.senor.naoservercontroller.PREFERENCE_FILE_KEY</string>
    <string name="pref_ip_address">IP Address</string>
    <string name="pref_port">Port</string>
    <string name="pref_ipAddress_default">127.0.0.1</string>
    <string name="pref_port_default">9559</string>
    <string name="pref_ipAddress_key">ipAddress</string>
    <string name="pref_port_key">port</string>
    <string name="EnterText">Enter Text</string>
    <string name="RefreshConnection">Refresh Connection</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="SeverConnection">Send Custom Message</string>
    <string name="CurrSettings">Current Robot Settings:</string>
    <string name="Begin">Connect</string>
    <string name="title_activity_controller">Remote</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Remote">Remote Control</string>
    <string name="Settings">Settings</string>
    <string name="SendNav">Socket Connection</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_title_add_friends_to_messages">Add Robot Name</string>
    <string name="pref_header_robot_name">Robot Names</string>
    <string name="EnterName">Enter Robot Name</string>
    <string name="AddNamesTxt">Add Robot Names</string>
    <string name="BackToIP">Edit Ip and Port</string>
    <string name="Next">Next</string>
    <string name="Large">Large</string>
    <string name="robot_names" />
    <string name="AddName">Add Name</string>
    <string name="Stand">Stand</string>
    <string name="Crouch">Crouch</string>
    <string name="Wave">Wave</string>
    <string name="SayText">Say Text</string>
    <string name="changeName">Change Robot Names</string>
    <string name="walk_control">Walk Control: </string>
    <string name="head_control">Head Control: </string>
    <string name="Right">Right</string>
    <string name="Left">Left</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="Forward">Forward</string>
    <string name="Backward">Backward</string>
    <string name="RobotNames">Robot Names</string>
    <string name="mood_remote">Mood Remote</string>
    <string name="center">Center</string>
    <string name="MoodControl">Mood Control</string>
    <string name="pref_header_help">Help</string>
    <string name="Help">Help/Troubleshoot</string>
    <string name="HelpDirectionBlock">To use this app, you to have all the steps completed\nFirst, you need to have a NAO Robot, or use a virtual NAO using Choregraph 2.1.~. This application combines three parts, the mobile app, a socket chat, and the Choregraph file. You can find all three things on the developer\'s GitHub. The Socket chat is written in Python2. Run the socket chat, and get the IP address of the chat. Then open Choregraphe and enter the IP address in the XNAParse Block. Connect to a robot, the version of the firmware does not matter (1.14 is fine). The robot will now listen to the socket chat on Port 5000. In the app, type in the IP Adress and Port 5000. Type in the Robot\'s name, spelling must be correct and then you are free to use the app anyway you want.\nTroubleshoot:\n 1. Make sure Choregraphe has the right IP Address\n 2. Make sure the app is on the same network as the socket chat\n 3. Make sure you are running or have saved the .crg file onto the robot\n 4. Make sure the robot\'s name is spelled correctly, upon adding the name the robot will say a check.\n</string>

    <string-array name="mood_array">
        <item>Neutral</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Angry</item>
    </string-array>
    <string name="title_activity_file">FileActivity</string>
    <string name="send_file">Send File</string>
    <string name="Sent">Sent</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="restart">Restart</string>
    <string name="Clear">Clear</string>

    <string name="title_activity_file">FileActivity</string>
    <string name="send_file">Send File</string>
    <string name="Sent">Sent</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="restart">Restart</string>
    <string name="Clear">Clear</string>
    <string name="stop">STOP</string>
    <string name="center2">Center</string>

</resources>
