<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_ipAddress_default"
        android:inputType="phone"
        android:key="@string/pref_ipAddress_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_ip_address"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_port_default"
        android:inputType="number"
        android:key="@string/pref_port_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_port" />


</PreferenceScreen>
