<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/Remote" />
        <item
            android:id="@+id/nav_mood"
            android:icon="@drawable/ic_sentiment_very_satisfied_black_24dp"
            android:title="@string/mood_remote"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_robot_names"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/RobotNames" />
    </group>

    <item android:title="@string/SeverConnection">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_code_black_24dp"
                android:title="@string/SendNav" />

        </menu>
    </item>

</menu>
