<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.JoyStickFrag"
    android:id="@+id/frame_layout">

    <com.ryanwedoff.senor.naoservercontroller.EditedJoyStickView
    android:id="@+id/joystickView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Left"
    android:id="@+id/left_info_text_view"
        android:layout_alignTop="@+id/right_info_text_view"
        android:layout_alignParentStart="true" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Up"
    android:id="@+id/up_info_text_view"
        android:layout_alignTop="@id/joystickView"
        android:layout_centerHorizontal="true" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Down"
    android:id="@+id/down_info_text_view"
        android:layout_alignBottom="@id/joystickView"
        android:layout_centerHorizontal="true" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Right"
    android:id="@+id/right_info_text_view"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#38d50000"
    android:id="@+id/stop_button"
    android:text="@string/center"
    android:layout_gravity="top|end"
        android:layout_alignTop="@+id/joystickView"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
