<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ryanwedoff.senor.naoservercontroller.SendTextFragment"
    android:id="@+id/SendTextFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterText"
        android:id="@+id/SendTextTitle"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SendTextFragmentEdit"
        android:inputType="text"
        android:hint="@string/MessageText"
        android:layout_below="@id/SendTextTitle"
        android:gravity="top|start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/SendTextFragmentSendButton"
        android:layout_toStartOf="@+id/SendTextFragmentSendButton" />

    <Button
        android:name="android:colorButtonNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SendTextFragmentSendButton"
        android:text="@string/Send"
        android:onClick="onSendText"
        android:drawableStart="@drawable/ic_menu_send"
        android:drawableLeft="@drawable/ic_menu_send"
        android:layout_below="@+id/SendTextTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />





</RelativeLayout>
